chore: 메서드명 수정